[package]
name = "balls-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11" }
select = "0.6"
futures = "0.3.6"
tokio = { version = "1.12.0", features = ["full"] }
cmd_lib = "1.3.0"
colored = "2.0.0"
